# boltor

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  builder.Dockerfile
.devcontainer/: devcontainer.json
include/boltor/: boltor.h  ecs.h
src/: boltor.c  ecs.c  game.c
